# CCC-Project

./: groceries.py  main.py  mealPlanner.py  recipes.py  webScraper.py
README/: README.md
config/: pyproject.toml
data/: groceryList.csv  mealPlan.csv  recipeStorage.csv
static/: styles.css
templates/: index.html
